--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start --dev-client --tunnel",
     "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild",
-    "android": "cross-env EXPO_NO_DOTENV=1 expo run:android",
-    "ios": "cross-env EXPO_NO_DOTENV=1 expo run:ios",
+    "android": "cross-env EXPO_NO_DOTENV=1 pnpm start --android",
+    "ios": "cross-env EXPO_NO_DOTENV=1 pnpm start --ios",
     "doctor": "npx expo-doctor@latest",
     "preinstall": "npx only-allow pnpm",
     "start:staging": "cross-env APP_ENV=staging pnpm run start",
@@ -27,19 +27,11 @@
     "np-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup",
     "version": "pnpm run prebuild && git add .",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "type-check": "tsc  --noemit",
-    "lint:translations": "eslint ./src/translations/ --fix --ext .json  ",
-    "test": "jest",
-    "test:ci": "pnpm run test --coverage",
-    "test:watch": "pnpm run test --watch",
-    "eas-build-pre-install": "./scripts/eas-pre-install",
-    "install-maestro": "curl -Ls 'https://get.maestro.mobile.dev' | bash",
-    "e2e-test": "maestro test .maestro/ -e APP_ID=com.obytes.development"
+    "type-check": "tsc  --noemit"
   },
   "dependencies": {
     "@bacons/link-assets": "^1.1.0",
     "@gorhom/bottom-sheet": "^4.4.5",
-    "@hookform/resolvers": "^2.9.11",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -55,21 +47,19 @@
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
+    "expo-document-picker": "~11.5.4",
+    "expo-file-system": "~15.4.4",
     "expo-image": "~1.3.2",
     "expo-linear-gradient": "~12.3.0",
-    "expo-localization": "~14.3.0",
     "expo-splash-screen": "0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
-    "i18next": "^22.4.11",
-    "lodash.memoize": "^4.1.2",
+    "jotai": "^2.4.3",
     "lucide-react-native": "^0.276.0",
     "nativewind": "^2.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.43.5",
-    "react-i18next": "^12.2.0",
     "react-if": "^4.1.5",
     "react-native": "0.72.4",
     "react-native-avoid-softinput": "^4.0.1",
@@ -77,20 +67,22 @@
     "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-mmkv": "2.6.3",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-restart": "0.0.27",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "13.9.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.7",
     "react-native-webview": "13.2.2",
     "react-native-youtube-iframe": "^2.3.0",
+    "react-native-zip-archive": "^6.1.0",
     "react-query-kit": "^1.4.6",
     "tailwind-merge": "^1.14.0",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.6"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -98,14 +90,10 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@expo/config": "~8.1.2",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/jest-native": "^5.4.2",
-    "@testing-library/react-native": "^11.5.3",
     "@types/i18n-js": "^3.8.4",
     "@types/jest": "^29.4.0",
     "@types/lodash.memoize": "^4.1.7",
     "@types/react": "~18.2.15",
-    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -126,7 +114,6 @@
     "metro-babel-register": "^0.73.3",
     "np": "^7.6.3",
     "prettier": "^2.8.4",
-    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.7",
     "ts-jest": "^29.0.5",
     "typescript": "^5.1.6"
