--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "@bacons/link-assets": "^1.1.0",
     "@gorhom/bottom-sheet": "^4.4.5",
+    "@miblanchard/react-native-slider": "^2.3.1",
+    "@plussub/srt-vtt-parser": "^1.1.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -44,6 +46,7 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.9",
     "expo": "~49.0.6",
+    "expo-brightness": "^11.4.0",
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
@@ -61,13 +64,14 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-if": "^4.1.5",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-avoid-softinput": "^4.0.1",
     "react-native-collapsible-tab-view": "^6.2.1",
     "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-mmkv": "2.6.3",
     "react-native-modal": "^13.0.1",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-restart": "0.0.27",
@@ -76,6 +80,7 @@
     "react-native-svg": "13.9.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.5.2",
+    "react-native-video": "6.0.0-alpha.8",
     "react-native-web": "~0.19.7",
     "react-native-webview": "13.2.2",
     "react-native-youtube-iframe": "^2.3.0",
@@ -94,6 +99,7 @@
     "@types/jest": "^29.4.0",
     "@types/lodash.memoize": "^4.1.7",
     "@types/react": "~18.2.15",
+    "@types/react-native-video": "^5.0.16",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "babel-plugin-module-resolver": "^5.0.0",
