--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "np-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup",
     "version": "pnpm run prebuild && git add .",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "type-check": "tsc  --noemit"
+    "type-check": "tsc  --noemit",
+    "generate": "pnpm graphql-codegen",
+    "generate:watch": "pnpm graphql-codegen --watch"
   },
   "dependencies": {
     "@bacons/link-assets": "^1.1.0",
     "@gorhom/bottom-sheet": "^4.4.5",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@plussub/srt-vtt-parser": "^1.1.0",
     "@react-native-community/viewpager": "^5.0.11",
@@ -57,6 +60,8 @@
     "expo-splash-screen": "0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "jotai": "^2.4.3",
     "lucide-react-native": "^0.276.0",
     "nativewind": "^2.0.10",
@@ -74,6 +79,7 @@
     "react-native-orientation-locker": "^1.5.0",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-restart": "0.0.27",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
@@ -94,7 +100,11 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@expo/config": "~8.1.2",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@parcel/watcher": "^2.3.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/i18n-js": "^3.8.4",
     "@types/jest": "^29.4.0",
     "@types/lodash.memoize": "^4.1.7",
@@ -122,6 +132,7 @@
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "repository": {
