--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "kaguya-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,20 +9,20 @@
     "ios": "cross-env EXPO_NO_DOTENV=1 pnpm start --ios",
     "doctor": "npx expo-doctor@latest",
     "preinstall": "npx only-allow pnpm",
-    "start:staging": "cross-env APP_ENV=staging pnpm run start",
-    "prebuild:staging": "cross-env APP_ENV=staging pnpm run prebuild",
-    "android:staging": "cross-env APP_ENV=staging pnpm run android",
-    "ios:staging": "cross-env APP_ENV=staging pnpm run ios",
+    "start:alpha": "cross-env APP_ENV=alpha pnpm run start",
+    "prebuild:alpha": "cross-env APP_ENV=alpha pnpm run prebuild",
+    "android:alpha": "cross-env APP_ENV=alpha pnpm run android",
+    "ios:alpha": "cross-env APP_ENV=alpha pnpm run ios",
     "start:production": "cross-env APP_ENV=production pnpm run start",
     "prebuild:production": "cross-env APP_ENV=production pnpm run prebuild",
     "android:production": "cross-env APP_ENV=production pnpm run android",
     "ios:production": "cross-env APP_ENV=production pnpm run ios",
-    "build:development:ios": "cross-env APP_ENV=development EXPO_NO_DOTENV=1 eas build --profile development --platform ios",
-    "build:development:android": "cross-env APP_ENV=development EXPO_NO_DOTENV=1 eas build --profile development --platform android ",
-    "build:staging:ios": "cross-env APP_ENV=staging EXPO_NO_DOTENV=1 eas build --profile staging --platform ios",
-    "build:staging:android": "cross-env APP_ENV=staging EXPO_NO_DOTENV=1 eas build --profile staging --platform android ",
-    "build:production:ios": "cross-env APP_ENV=production EXPO_NO_DOTENV=1 eas build --profile production --platform ios",
-    "build:production:android": "cross-env APP_ENV=production EXPO_NO_DOTENV=1 eas build --profile production --platform android ",
+    "build:development:ios": "cross-env APP_ENV=development EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile development --platform ios",
+    "build:development:android": "cross-env APP_ENV=development EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile development --platform android ",
+    "build:alpha:ios": "cross-env APP_ENV=alpha EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile alpha --platform ios",
+    "build:alpha:android": "cross-env APP_ENV=alpha EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile alpha --platform android ",
+    "build:production:ios": "cross-env APP_ENV=production EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile production --platform ios",
+    "build:production:android": "cross-env APP_ENV=production EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile production --platform android ",
     "postinstall": "husky install",
     "np-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup",
     "version": "pnpm run prebuild && git add .",
@@ -35,7 +35,6 @@
     "@bacons/link-assets": "^1.1.0",
     "@gorhom/bottom-sheet": "^4.4.5",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@miblanchard/react-native-slider": "^2.3.1",
     "@plussub/srt-vtt-parser": "^1.1.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "2.4.10",
@@ -56,9 +55,7 @@
     "expo-file-system": "~15.4.4",
     "expo-image": "~1.3.2",
     "expo-linear-gradient": "~12.3.0",
-    "expo-splash-screen": "0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
+    "expo-updates": "~0.18.17",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "jotai": "^2.4.3",
@@ -69,7 +66,6 @@
     "react-error-boundary": "^3.1.4",
     "react-if": "^4.1.5",
     "react-native": "0.72.5",
-    "react-native-avoid-softinput": "^4.0.1",
     "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-mmkv": "2.6.3",
