--- a/.github/actions/setup-jdk-generate-apk/action.yml
+++ b/.github/actions/setup-jdk-generate-apk/action.yml
@@ -2,30 +2,30 @@ name: 'Setup  JDK + GRADLE + Generate APK'
 description: 'Setup  JDK + GRADLE + Generate APK'
 inputs:
   APP_ENV:
-    description: 'APP_ENV (one of): development, staging, production'
+    description: 'APP_ENV (one of): development, alpha, production'
     required: true
-    default: 'staging'
+    default: 'alpha'
 
 runs:
   using: 'composite'
   steps:
-      - name: Set Up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '11'
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+    - name: Set Up JDK
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'zulu' # See 'Supported distributions' for available options
+        java-version: '11'
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
 
-      - name: Generate Test APK
-        run: |
-          pnpm prebuild:${{ inputs.APP_ENV }}
-          cd  android
-          chmod +x ./gradlew
-          ./gradlew assembleRelease --no-daemon
-          cd ..
-        shell: bash
-        env:
-          EXPO_NO_DOTENV: '1'
-          APP_ENV: ${{ inputs.APP_ENV }}
-          CI: 'true'
+    - name: Generate Test APK
+      run: |
+        pnpm prebuild:${{ inputs.APP_ENV }}
+        cd  android
+        chmod +x ./gradlew
+        ./gradlew assembleRelease --no-daemon
+        cd ..
+      shell: bash
+      env:
+        EXPO_NO_DOTENV: '1'
+        APP_ENV: ${{ inputs.APP_ENV }}
+        CI: 'true'
