--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "expo-file-system": "~15.4.4",
     "expo-image": "~1.3.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "expo-updates": "~0.18.17",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
