feat: module linking from file

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,32 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="com.hoangvu12.kaguya.development"/>
         <data android:scheme="exp+kaguya"/>
+        <data android:scheme="kaguya"/>
+        <data android:scheme="com.hoangvu12.kaguya.alpha"/>
+      </intent-filter>
+      <intent-filter data-generated="true">
+        <action android:name="android.intent.action.VIEW"/>
+        <data android:scheme="file" android:pathPattern=".*\\.kmodule" android:mimeType="application/zip"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+      </intent-filter>
+      <intent-filter data-generated="true">
+        <action android:name="android.intent.action.VIEW"/>
+        <data android:scheme="file" android:pathPattern=".*\\.kmodule" android:mimeType="application/octet-stream"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+      </intent-filter>
+      <intent-filter data-generated="true">
+        <action android:name="android.intent.action.VIEW"/>
+        <data android:scheme="content" android:pathPattern=".*\\.kmodule" android:mimeType="application/zip"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+      </intent-filter>
+      <intent-filter data-generated="true">
+        <action android:name="android.intent.action.VIEW"/>
+        <data android:scheme="content" android:pathPattern=".*\\.kmodule" android:mimeType="application/octet-stream"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
