--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "expo start --dev-client --tunnel",
-    "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild",
-    "android": "cross-env EXPO_NO_DOTENV=1 pnpm start --android",
-    "ios": "cross-env EXPO_NO_DOTENV=1 pnpm start --ios",
+    "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild --clean",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "android:client": "cross-env EXPO_NO_DOTENV=1 pnpm start --android",
     "doctor": "npx expo-doctor@latest",
     "preinstall": "npx only-allow pnpm",
     "start:alpha": "cross-env APP_ENV=alpha pnpm run start",
@@ -55,6 +56,7 @@
     "expo-file-system": "~15.4.4",
     "expo-image": "~1.3.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
