--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "expo start --dev-client --tunnel",
-    "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild --clean",
+    "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "android:client": "cross-env EXPO_NO_DOTENV=1 pnpm start --android",
@@ -44,7 +44,6 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.26.1",
-    "app-icon-badge": "^0.0.15",
     "axios": "^1.3.4",
     "dayjs": "^1.11.9",
     "expo": "~49.0.6",
