chore: update gh workflow

--- a/package.json
+++ b/package.json
@@ -18,12 +18,7 @@
     "prebuild:production": "cross-env APP_ENV=production pnpm run prebuild",
     "android:production": "cross-env APP_ENV=production pnpm run android",
     "ios:production": "cross-env APP_ENV=production pnpm run ios",
-    "build:development:ios": "cross-env APP_ENV=development EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile development --platform ios",
-    "build:development:android": "cross-env APP_ENV=development EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile development --platform android ",
-    "build:alpha:ios": "cross-env APP_ENV=alpha EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile alpha --platform ios",
-    "build:alpha:android": "cross-env APP_ENV=alpha EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile alpha --platform android ",
-    "build:production:ios": "cross-env APP_ENV=production EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile production --platform ios",
-    "build:production:android": "cross-env APP_ENV=production EXPO_NO_DOTENV=1 npx eas-cli@latest build --profile production --platform android ",
+    "build": "npx eas-cli@latest build --platform android --local",
     "postinstall": "husky install",
     "np-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup",
     "version": "pnpm run prebuild && git add .",
