--- a/.github/workflows/build-release-apk.yaml
+++ b/.github/workflows/build-release-apk.yaml
@@ -17,6 +17,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: 📦 Setup Node + PNPM + install deps
+        uses: ./.github/actions/setup-node-pnpm-install
+
       - name: 📦 Setup Expo and EAS
         uses: expo/expo-github-action@v8
         with:
