--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -11,12 +11,12 @@ jobs:
     name: Type Check (tsc)
     runs-on: ubuntu-latest
     steps:
-      - name : 📦 Checkout project repo
+      - name: 📦 Checkout project repo
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name : 📦 Setup Node + PNPM + install deps
+      - name: 📦 Setup Node + PNPM + install deps
         uses: ./.github/actions/setup-node-pnpm-install
 
       - name: 📦 Install Reviewdog
@@ -31,7 +31,8 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🏃‍♂️ Run TypeScript Commit
+      - name:
+          🏃‍♂️ Run TypeScript Commit
           # If it's not a Pull Request then we just need to run the type-check
         if: github.event_name != 'pull_request'
         run: pnpm type-check
