--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "android:production": "cross-env APP_ENV=production pnpm run android",
     "ios:production": "cross-env APP_ENV=production pnpm run ios",
     "build": "npx eas-cli@latest build --platform android --local",
-    "build:development": "cross-env APP_ENV=development pnpm build",
-    "build:alpha": "cross-env APP_ENV=alpha pnpm build",
-    "build:production": "cross-env APP_ENV=production pnpm build",
+    "build:development": "cross-env APP_ENV=development pnpm build --profile development",
+    "build:alpha": "cross-env APP_ENV=alpha pnpm build --profile alpha",
+    "build:production": "cross-env APP_ENV=production pnpm build --profile production",
     "postinstall": "husky install",
     "np-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup",
     "version": "pnpm run prebuild && git add .",
