--- a/.github/workflows/build-alpha-release-apk.yaml
+++ b/.github/workflows/build-alpha-release-apk.yaml
@@ -50,6 +50,12 @@ jobs:
         run: ls -la ./app-build
         shell: bash
 
+      - name: 📱 Upload binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: alpha-${{ inputs.version }}
+          path: app-build
+
       # - name: Generate changelog
       #   id: changelog
       #   uses: metcalfc/changelog-generator@v4.1.0
