--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaguya-app",
-  "version": "0.0.1",
+  "version": "0.1.1-alpha",
   "private": true,
   "scripts": {
     "start": "expo start --dev-client --tunnel",
@@ -10,6 +10,7 @@
     "android:client": "cross-env EXPO_NO_DOTENV=1 pnpm start --android",
     "doctor": "npx expo-doctor@latest",
     "preinstall": "npx only-allow pnpm",
+    "prebuild:development": "cross-env APP_ENV=development pnpm run prebuild",
     "start:alpha": "cross-env APP_ENV=alpha pnpm run start",
     "prebuild:alpha": "cross-env APP_ENV=alpha pnpm run prebuild",
     "android:alpha": "cross-env APP_ENV=alpha pnpm run android",
@@ -68,6 +69,8 @@
     "react-error-boundary": "^3.1.4",
     "react-if": "^4.1.5",
     "react-native": "0.72.5",
+    "react-native-device-info": "^10.11.0",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-mmkv": "2.6.3",
     "react-native-modal": "^13.0.1",
