--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaguya-app",
-  "version": "0.1.2-alpha",
+  "version": "0.1.3-alpha",
   "private": true,
   "scripts": {
     "start": "expo start --dev-client --tunnel",
@@ -41,15 +41,18 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@sentry/react-native": "^5.5.0",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^4.26.1",
     "axios": "^1.3.4",
     "dayjs": "^1.11.9",
     "expo": "~49.0.6",
+    "expo-application": "~5.3.0",
     "expo-brightness": "^11.4.0",
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
+    "expo-device": "~5.4.0",
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.4",
     "expo-image": "~1.3.2",
@@ -70,7 +73,6 @@
     "react-if": "^4.1.5",
     "react-native": "0.72.5",
     "react-native-device-info": "^10.11.0",
-    "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-mmkv": "2.6.3",
     "react-native-modal": "^13.0.1",
@@ -78,7 +80,6 @@
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-restart": "0.0.27",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "13.9.0",
@@ -90,6 +91,7 @@
     "react-native-youtube-iframe": "^2.3.0",
     "react-native-zip-archive": "^6.1.0",
     "react-query-kit": "^1.4.6",
+    "sentry-expo": "~7.0.1",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.21.4"
   },
