fix: update sentry auth token

--- a/.github/workflows/build-alpha-release-apk.yaml
+++ b/.github/workflows/build-alpha-release-apk.yaml
@@ -22,8 +22,10 @@ jobs:
         run: |
           touch .env.alpha
           echo EAS_PROJECT_ID=$EAS_PROJECT_ID >> .env.alpha
+          echo SENTRY_AUTH_TOKEN=$SENTRY_AUTH_TOKEN >> .env.alpha
         env:
           EAS_PROJECT_ID: ${{ secrets.EAS_PROJECT_ID }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
       - name: 📦 Setup Expo and EAS
         uses: expo/expo-github-action@v8
