--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.4",
     "expo-image": "~1.3.2",
+    "expo-intent-launcher": "~10.7.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-splash-screen": "~0.20.5",
