--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.4",
     "expo-image": "~1.3.2",
+    "expo-intent-launcher": "~10.7.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-splash-screen": "~0.20.5",
@@ -87,7 +88,7 @@
     "react-native-toast-message": "^2.1.7",
     "react-native-video": "6.0.0-alpha.8",
     "react-native-web": "~0.19.7",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "13.6.2",
     "react-native-youtube-iframe": "^2.3.0",
     "react-native-zip-archive": "^6.1.0",
     "react-query-kit": "^1.4.6",
