--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@bacons/link-assets": "^1.1.0",
     "@gorhom/bottom-sheet": "^4.4.5",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@jonasmerlin/react-native-markdown-display": "github:jonasmerlin/react-native-markdown-display",
     "@plussub/srt-vtt-parser": "^1.1.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "2.4.10",
