--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "expo-application": "~5.3.0",
     "expo-brightness": "^11.4.0",
     "expo-build-properties": "~0.8.3",
+    "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
     "expo-device": "~5.4.0",
