chore: replace pnpm with bun

--- a/package.json
+++ b/package.json
@@ -4,32 +4,31 @@
   "private": true,
   "scripts": {
     "start": "expo start --dev-client --tunnel",
-    "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild",
+    "prebuild": "cross-env EXPO_NO_DOTENV=1 bun expo prebuild",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "android:client": "cross-env EXPO_NO_DOTENV=1 pnpm start --android",
+    "android:client": "cross-env EXPO_NO_DOTENV=1 bun start --android",
     "doctor": "npx expo-doctor@latest",
-    "preinstall": "npx only-allow pnpm",
-    "prebuild:development": "cross-env APP_ENV=development pnpm run prebuild",
-    "start:alpha": "cross-env APP_ENV=alpha pnpm run start",
-    "prebuild:alpha": "cross-env APP_ENV=alpha pnpm run prebuild",
-    "android:alpha": "cross-env APP_ENV=alpha pnpm run android",
-    "ios:alpha": "cross-env APP_ENV=alpha pnpm run ios",
-    "start:production": "cross-env APP_ENV=production pnpm run start",
-    "prebuild:production": "cross-env APP_ENV=production pnpm run prebuild",
-    "android:production": "cross-env APP_ENV=production pnpm run android",
-    "ios:production": "cross-env APP_ENV=production pnpm run ios",
+    "prebuild:development": "cross-env APP_ENV=development bun run prebuild",
+    "start:alpha": "cross-env APP_ENV=alpha bun run start",
+    "prebuild:alpha": "cross-env APP_ENV=alpha bun run prebuild",
+    "android:alpha": "cross-env APP_ENV=alpha bun run android",
+    "ios:alpha": "cross-env APP_ENV=alpha bun run ios",
+    "start:production": "cross-env APP_ENV=production bun run start",
+    "prebuild:production": "cross-env APP_ENV=production bun run prebuild",
+    "android:production": "cross-env APP_ENV=production bun run android",
+    "ios:production": "cross-env APP_ENV=production bun run ios",
     "build": "npx eas-cli@latest build --platform android --local",
-    "build:development": "cross-env APP_ENV=development pnpm build --profile development",
-    "build:alpha": "cross-env APP_ENV=alpha pnpm build --profile alpha",
-    "build:production": "cross-env APP_ENV=production pnpm build --profile production",
+    "build:development": "cross-env APP_ENV=development bun build --profile development",
+    "build:alpha": "cross-env APP_ENV=alpha bun build --profile alpha",
+    "build:production": "cross-env APP_ENV=production bun build --profile production",
     "postinstall": "husky install",
     "np-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup",
-    "version": "pnpm run prebuild && git add .",
+    "version": "bun run prebuild && git add .",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "type-check": "tsc  --noemit",
-    "generate": "pnpm graphql-codegen",
-    "generate:watch": "pnpm graphql-codegen --watch"
+    "generate": "bun graphql-codegen",
+    "generate:watch": "bun graphql-codegen --watch"
   },
   "dependencies": {
     "@bacons/link-assets": "^1.1.0",
@@ -82,7 +81,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-pager-view": "6.2.0",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "3.4.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
@@ -134,7 +133,7 @@
     "metro-babel-register": "^0.73.3",
     "np": "^7.6.3",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "3.2.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
@@ -143,7 +142,6 @@
     "type": "git",
     "url": "git+https://github.com/user/repo-name.git"
   },
-  "packageManager": "pnpm@8.6.5",
   "osMetadata": {
     "initVersion": "4.2.2"
   }
