--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,8 @@
   "cSpell.words": ["Flashlist", "Lato"],
   "i18n-ally.localesPaths": ["src/translations/"],
   "i18n-ally.keystyle": "nested",
-  "i18n-ally.disabled": false // make sure to disable i18n-ally in your global setting and only enable it for such projects
+  "i18n-ally.disabled": false,
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  } // make sure to disable i18n-ally in your global setting and only enable it for such projects
 }
