--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "android:production": "cross-env APP_ENV=production bun run android",
     "ios:production": "cross-env APP_ENV=production bun run ios",
     "build": "npx eas-cli@latest build --platform android --local",
-    "build:development": "cross-env APP_ENV=development bun build --profile development",
-    "build:alpha": "cross-env APP_ENV=alpha bun build --profile alpha",
-    "build:production": "cross-env APP_ENV=production bun build --profile production",
+    "build:development": "cross-env APP_ENV=development bun run build --profile development",
+    "build:alpha": "cross-env APP_ENV=alpha bun run build --profile alpha",
+    "build:production": "cross-env APP_ENV=production bun run build --profile production",
     "postinstall": "husky install",
     "np-release": "cross-env SKIP_BRANCH_PROTECTION=true np --no-publish --no-cleanup",
     "version": "bun run prebuild && git add .",
