chore(workflows): pls workflow works

--- a/.github/workflows/build-alpha-release-apk.yaml
+++ b/.github/workflows/build-alpha-release-apk.yaml
@@ -32,7 +32,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📱 Run Android Build
-        run: bun run build:alpha --non-interactive --output=kaguya-${{github.ref_name}}.apk --no-wait --message "Build alpha ${{ github.ref_name }}"
+        run: bun run build:alpha --non-interactive --output=kaguya-${{github.ref_name}}.apk --no-wait
         shell: bash
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
