--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@bacons/link-assets": "^1.1.0",
-    "@gorhom/bottom-sheet": "^4.4.5",
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@jonasmerlin/react-native-markdown-display": "github:jonasmerlin/react-native-markdown-display",
     "@plussub/srt-vtt-parser": "^1.1.0",
@@ -49,11 +49,11 @@
     "dayjs": "^1.11.9",
     "expo": "~49.0.6",
     "expo-application": "~5.3.0",
-    "expo-brightness": "^11.4.0",
+    "expo-brightness": " ~11.4.1",
     "expo-build-properties": "~0.8.3",
     "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
-    "expo-dev-client": "~2.4.8",
+    "expo-dev-client": "~2.4.13",
     "expo-device": "~5.4.0",
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.4",
@@ -74,7 +74,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-if": "^4.1.5",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-device-info": "^10.11.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-mmkv": "2.6.3",
@@ -115,7 +115,6 @@
     "@types/react-native-video": "^5.0.16",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
-    "babel-plugin-module-resolver": "^5.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
